added get,post and patch requests to api

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "test": "jest app.test.js"
+    "test": "jest app.test.js",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
