--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "cors": "^2.8.5",
+    "cryptr": "^6.3.0",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "stripe": "^14.18.0"
   },
   "devDependencies": {
     "husky": "^9.0.11",
